devops/inventory-service/inventory-service-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
        version: v1
    spec:
      containers:
        - name: inventory-service
          image: lifezqy/inventory-service:v1
          resources:
            requests:
              cpu: 0.1
              memory: 200
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  ports:
    - port: 80
      targetPort: 9020
      protocol: TCP
      name: http
  selector:
    app: inventory-service
