devops/inventory-service/ingress-inventory.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: inventory-ingress

#  annotations:
#
#    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:

  rules:

    - host: inventory.com

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: inventory-service

                port:

                  number: 80
